--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
 
 			<h4> My hobbies are: </h4>
 			<ul>
-				<li> reading </li>
+				<li>baca</li>
 				<li>swimming </li>
-				<li> camping </li>
+				<li>nature</li>
 				<li> listening music
 					<ol>
 						<li> pop </li>
